--- a/views/partials/footer-script.ejs
+++ b/views/partials/footer-script.ejs
@@ -1,5 +1,5 @@
   <!-- jQuery -->
-      <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
+      <!-- <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script> -->
       <!-- jquery-ui --> 
       <script src="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
       <!-- Bootstrap -->
