--- a/views/admin/calender/calender.ejs
+++ b/views/admin/calender/calender.ejs
@@ -49,10 +49,15 @@
             <!-- Main content -->
             <section class="content">
           
-			<div class="panel panel-default">
-				
-				<div class="panel-heading">Sample Data</div>
-				<div class="panel-body">
+		<div class="panel panel-bd lobidrag">
+                        <div class="panel-heading">
+                           <div class="btn-group" id="buttonexport">
+                              <a href="#">
+                                 <h4>Calender</h4>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="panel-body">
 					 <div class="row"> 
  <div class="col-md-6 text-left">
 								 <input type="checkbox" class='checkall' id='checkall'> &nbsp;&nbsp; <input type="button" class="btn-sm btn-danger para" id='delete_record' value='Check All & Delete' >
