--- a/views/admin/faculty/faculty.ejs
+++ b/views/admin/faculty/faculty.ejs
@@ -49,10 +49,15 @@
             <!-- Main content -->
             <section class="content">
           
-			<div class="panel panel-default">
-				
-				<div class="panel-heading">Sample Data</div>
-				<div class="panel-body">
+			<div class="panel panel-bd lobidrag">
+                        <div class="panel-heading">
+                           <div class="btn-group" id="buttonexport">
+                              <a href="#">
+                                 <h4>All Faculty</h4>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="panel-body">
 					 <div class="row"> 
  <div class="col-md-6 text-left">
 								 <input type="checkbox" class='checkall' id='checkall'> &nbsp;&nbsp; <input type="button" class="btn-sm btn-danger para" id='delete_record' value='Check All & Delete' >
@@ -61,7 +66,12 @@
                 <input type="button" id="btnAdd" class="btn-sm btn-primary para" value="Export as Excel" />
 				
             </div>
-           
+            <div class="col-md-6 text-right">
+ 
+                                 <a href="#" class="btn btn-add" data-toggle="modal" data-target="#addFaculty-lg"><i class="fa fa-plus"></i> Add New</a>  
+                                  
+                             
+            </div>
 			<br>
         </div>
 		<br>
@@ -92,14 +102,277 @@
          <!-- /.content-wrapper -->
         <%- include('../../partials/footer') %>
       </div>
-	
+	 <div class="modal fade" id="addFaculty-lg" tabindex="-1" role="dialog">
+                  <div class="modal-dialog modal-lg"  role="document">
+                     <div class="modal-content">
+                        <div class="modal-header modal-header-primary">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                           <h3><i class="fa fa-plus m-r-5"></i> Add New Faculty</h3>
+                        </div>
+                        <div class="modal-body">
+                           <div class="row">
+                              <div class="col-md-12">
+                                 <form action="http://thememinister.com/crm/index.html" id="loginForm" novalidate>
+                  <input type="hidden" class="form-control" name="studentId" id="studentId" value="${studentId}">
+                    <input type="hidden" class="form-control" name="schoolId" id="schoolId" value="${schoolId}">
+                    <input type="hidden" class="form-control" name="classId" id="classId" value="${classId}">
+                            <div class="row">
+                                <div class="form-group col-lg-6">
+                                    <label>Name</label>
+                                    <input type="text" value="" id="name" class="form-control" name="name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Father's Name</label>
+                                    <input type="text" value="" id="father_name" class="form-control" name="father_name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Mother's Name</label>
+                                    <input type="text" value="" id="mother_name" class="form-control" name="mother_name">
+                                </div>
+                                
+                                  <div class="form-group col-lg-6">
+                                    <label>Hobbies</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label> Experience</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Qualification</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Specialize in</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Gender</label>
+                                   <select name="gender" id="gender" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="Male">Male</option>
+                                    <option value="FeMale">FeMale</option>
+                                   </select>
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>DOB</label>
+                                    <input type="date" value="" id="dob" class="form-control" name="dob">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Email ID</label>
+                                    <input type="email" value="" id="email" class="form-control" name="email">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Phone Number</label>
+                                    <input type="text" value="" id="phone" class="form-control" name="phone">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label> Address</label>
+                                    <textarea  id="address"  class="form-control" rows="5" name="address"></textarea>
+                                  
+                                </div>
+                               
+                                <div class="form-group col-lg-6">
+                                    <label>Upload Photo</label>
+                                    <input type="file" value="" id="photo" class="form-control" name="photo">
+                                </div>
+                            </div>
+                            <div align="center">
+                                <button class="btn btn-warning">Create New</button>
+                            </div>
+                        </form>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="modal-footer">
+                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                        </div>
+                     </div>
+                     <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+               </div>
+               
+                 <div class="modal fade" id="editFacultyModal" tabindex="-1" role="dialog">
+                  <div class="modal-dialog modal-lg"  role="document">
+                     <div class="modal-content">
+                        <div class="modal-header modal-header-primary">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                           <h3><i class="fa fa-plus m-r-5"></i> Edit Faculty</h3>
+                        </div>
+                        <div class="modal-body">
+                         
+                              <div id="editFacultyDiv">
+                               
+                             
+                           </div>
+                        </div>
+                        <div class="modal-footer">
+                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                        </div>
+                     </div>
+                     <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+               </div>
+                <div class="modal fade" id="deleteFacultyModal" tabindex="-1" role="dialog">
+                  <div class="modal-dialog">
+                     <div class="modal-content">
+                        <div class="modal-header modal-header-primary">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                           <h3><i class="fa fa-minus m-r-5"></i> Remove Faculty</h3>
+                        </div>
+                        <div class="modal-body">
+                         
+                              <div id="deleteFacultyDiv">
+                               
+                             
+                           </div>
+                        </div>
+                        <div class="modal-footer">
+                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                        </div>
+                     </div>
+                     <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+               </div>
       <!-- /.wrapper -->
       <!-- Start Core Plugins
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
    <script type="text/javascript" language="javascript">
+    function editFaculty(studentId,schoolId,classId) {
+    try {
+      $("#editFacultyDiv").html("");
+      $("#editFacultyModal").modal("toggle");
+      $.ajax({
+         url: `/admission/fetch-student-byid`,
+         type: "post",
+         data:{studentId:studentId,schoolId:schoolId,classId:classId},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+          alert("teteet")
+            let formDetails = ``;
+            formDetails += `<form action="http://thememinister.com/crm/index.html" id="loginForm" novalidate>
+                  <input type="hidden" class="form-control" name="studentId" id="studentId" value="${studentId}">
+                    <input type="hidden" class="form-control" name="schoolId" id="schoolId" value="${schoolId}">
+                    <input type="hidden" class="form-control" name="classId" id="classId" value="${classId}">
+                            <div class="row">
+                                <div class="form-group col-lg-6">
+                                    <label>Name</label>
+                                    <input type="text" value="" id="name" class="form-control" name="name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Father's Name</label>
+                                    <input type="text" value="" id="father_name" class="form-control" name="father_name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Mother's Name</label>
+                                    <input type="text" value="" id="mother_name" class="form-control" name="mother_name">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Class</label>
+                                    <input type="text" value="" id="class" class="form-control" name="class">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Hobbies</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>DOB</label>
+                                    <input type="date" value="" id="dob" class="form-control" name="dob">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Email ID</label>
+                                    <input type="email" value="" id="email" class="form-control" name="email">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Phone Number</label>
+                                    <input type="text" value="" id="phone" class="form-control" name="phone">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Current Address</label>
+                                    <input type="text"  id="studentcurrentaddress1" placeholder="address line 1" class="form-control" name="address1">
+                                     <label></label>
+                                    <input type="text" id="studentcurrentaddress2" placeholder="address line 2" class="form-control" name="address2">
+                                     <label></label>
+                                    <input type="text"  id="studentcurrentstate" placeholder="State" class="form-control" name="state">
+                                     <label></label>
+                                    <input type="text" id="studentcurrentdistrict" placeholder="District" class="form-control" name="district">
+                                     <label></label>
+                                    <input type="text"  id="studentcurrentcity" placeholder="City" class="form-control" name="city">
+                                     <label></label>
+                                    <input type="text" id="studentcurrentpincode" placeholder="Pin Code" class="form-control" name="pincode">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    
+                                    <label>Permanent Address</label> ( <input type="checkbox" name="studentaddresscheck" id="studentaddresscheck"/>Same as Current: )
+                                    <input type="text" placeholder="address line 1"  id="studentpermanentaddress1" class="form-control" name="address1">
+                                      <label></label>
+                                    <input type="text" id="studentpermanentaddress2" placeholder="address line 2" class="form-control" name="address2">
+                                     <label></label>
+                                    <input type="text"  id="studentpermanentstate" placeholder="State" class="form-control" name="state">
+                                     <label></label>
+                                    <input type="text" id="studentpermanentdistrict" placeholder="District" class="form-control" name="district">
+                                     <label></label>
+                                    <input type="text"  id="studentpermanentcity" placeholder="City" class="form-control" name="city">
+                                     <label></label>
+                                    <input type="text" id="studentpermanentpincode" placeholder="Pin Code" class="form-control" name="pincode">
+                                </div>
+                                <div class="form-group col-lg-6">
+                                    <label>Upload Photo</label>
+                                    <input type="file" value="" id="photo" class="form-control" name="photo">
+                                </div>
+                            </div>
+                            <div align="center">
+                                <button class="btn btn-warning">Register</button>
+                            </div>
+                        </form>`;
+            $("#editFacultyDiv").html(formDetails);
+          
+        },
+      });
+    } catch (err) {
+      console.error(err);
+    }
+  }
+   function deleteAdmission(studentId,schoolId,classId) {
+    try {
+      $("#deleteFacultyDiv").html("");
+      $("#deleteFacultyModal").modal("toggle");
+   
+          
+            let formDetails = ``;
+            formDetails += ` <form action="/release-student" method="post">
+                    <input type="hidden" class="form-control" name="studentId" id="studentId" value="${studentId}">
+                    <input type="hidden" class="form-control" name="schoolId" id="schoolId" value="${schoolId}">
+                    <input type="hidden" class="form-control" name="classId" id="classId" value="${classId}">
+                    
+                   <div class="col-md-12">
+                    Are You Sure. ?
+                   </div>
 
+                   <div class="text-center mt-3">
+                    <a  class="btn btn-danger waves-effect waves-light" data-bs-dismiss="modal"> No </a>
+                     <button
+                       type="submit"
+                       class="btn btn-primary waves-effect waves-light"
+                       id="register"
+                     >
+                       Yes
+                     </button>
+                   </div>
+                 </form> `;
+            $("#deleteFacultyDiv").html(formDetails);
+          
+       
+    } catch (err) {
+      console.error(err);
+    }
+  }
 $(document).ready(function(){
 	
 
