--- a/views/partials/top-bar.ejs
+++ b/views/partials/top-bar.ejs
@@ -5,16 +5,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>ERP Admin Panel</title>
-      <script src="/assets/plugins/jQuery/jquery.min.js"></script>
+    
 		<link rel="stylesheet" href="/assets/dist/css/toastr.min.css" /> 
 		<link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" /> 
-		<script src="/assets/plugins/jQuery/jquery.dataTables.min.js"></script>
-		<script src="/assets/bootstrap/js/dataTables.bootstrap.min.js"></script>  
+		
 	<link rel="stylesheet" href="/assets/bootstrap/css/dataTables.bootstrap.min.css" />
-		<script src="/assets/dist/js/toastr.min.js"></script>
-		<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-		<link href="/assets/bootstrap/css/bootstrap-editable.css" rel="stylesheet"> 
-  		<script src="/assets/bootstrap/js/bootstrap-editable.js"></script>
+		
       <!-- Datatable CSS -->
 <link href='https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'>
 
@@ -25,15 +21,19 @@
       <!-- Favicon and touch icons -->
       <link rel="shortcut icon" href="/assets/dist/img/ico/favicon.png" type="image/x-icon">
       <!-- Start Global Mandatory Style
+
          =====================================================================-->
+         
       <!-- jquery-ui css -->
       <link href="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
       <!-- Bootstrap -->
       <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+      
       <!-- Bootstrap rtl -->
       <!--<link href="assets/bootstrap-rtl/bootstrap-rtl.min.css" rel="stylesheet" type="text/css"/>-->
       <!-- Lobipanel css -->
       <link href="/assets/plugins/lobipanel/lobipanel.min.css" rel="stylesheet" type="text/css"/>
+      
       <!-- Pace css -->
       <link href="/assets/plugins/pace/flash.css" rel="stylesheet" type="text/css"/>
       <!-- Font Awesome -->
@@ -42,6 +42,7 @@
       <link href="/assets/pe-icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet" type="text/css"/>
       <!-- Themify icons -->
       <link href="/assets/themify-icons/themify-icons.css" rel="stylesheet" type="text/css"/>
+      
       <!-- End Global Mandatory Style
          =====================================================================-->
       <!-- Start page Label Plugins 
@@ -55,11 +56,14 @@
       <!-- Start Theme Layout Style
          =====================================================================-->
       <!-- Theme style -->
+       <link href="/assets/plugins/modals/component.css" rel="stylesheet" type="text/css"/>
       <link href="/assets/dist/css/stylecrm.css" rel="stylesheet" type="text/css"/>
       <!-- Theme style rtl -->
       <!--<link href="assets/dist/css/stylecrm-rtl.css" rel="stylesheet" type="text/css"/>-->
       <!-- End Theme Layout Style
          =====================================================================-->
+
+         
    </head>
    <body class="hold-transition sidebar-mini">
       <!--preloader-->
