--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -109,9 +109,31 @@
                                     <label>Mother's Name</label>
                                     <input type="text" value="" id="mother_name" class="form-control" name="mother_name">
                                 </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Parent  Phone Number</label>
+                                    <input type="text" value="" id="phone" class="form-control" name="phone">
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>School</label>
+                                   <select name="classId" id="classId" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="1">School1</option>
+                                   </select>
+                                </div>
                                   <div class="form-group col-lg-6">
                                     <label>Class</label>
-                                    <input type="text" value="" id="class" class="form-control" name="class">
+                                   <select name="classId" id="classId" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="1">class1</option>
+                                   </select>
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Gender</label>
+                                   <select name="classId" id="classId" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="Male">Male</option>
+                                    <option value="FeMale">FeMale</option>
+                                   </select>
                                 </div>
                                   <div class="form-group col-lg-6">
                                     <label>Hobbies</label>
@@ -130,35 +152,15 @@
                                     <input type="text" value="" id="phone" class="form-control" name="phone">
                                 </div>
                                  <div class="form-group col-lg-6">
-                                    <label>Current Address</label>
-                                    <input type="text"  id="studentcurrentaddress1" placeholder="address line 1" class="form-control" name="address1">
-                                     <label></label>
-                                    <input type="text" id="studentcurrentaddress2" placeholder="address line 2" class="form-control" name="address2">
-                                     <label></label>
-                                    <input type="text"  id="studentcurrentstate" placeholder="State" class="form-control" name="state">
-                                     <label></label>
-                                    <input type="text" id="studentcurrentdistrict" placeholder="District" class="form-control" name="district">
-                                     <label></label>
-                                    <input type="text"  id="studentcurrentcity" placeholder="City" class="form-control" name="city">
-                                     <label></label>
-                                    <input type="text" id="studentcurrentpincode" placeholder="Pin Code" class="form-control" name="pincode">
-                                </div>
-                                 <div class="form-group col-lg-6">
-                                    
-                                    <label>Permanent Address</label> ( <input type="checkbox" name="studentaddresscheck" id="studentaddresscheck"/>Same as Current: )
-                                    <input type="text" placeholder="address line 1"  id="studentpermanentaddress1" class="form-control" name="address1">
-                                      <label></label>
-                                    <input type="text" id="studentpermanentaddress2" placeholder="address line 2" class="form-control" name="address2">
-                                     <label></label>
-                                    <input type="text"  id="studentpermanentstate" placeholder="State" class="form-control" name="state">
-                                     <label></label>
-                                    <input type="text" id="studentpermanentdistrict" placeholder="District" class="form-control" name="district">
-                                     <label></label>
-                                    <input type="text"  id="studentpermanentcity" placeholder="City" class="form-control" name="city">
-                                     <label></label>
-                                    <input type="text" id="studentpermanentpincode" placeholder="Pin Code" class="form-control" name="pincode">
+                                    <label> Address</label>
+                                  
+                                    <textarea id="address" placeholder="Address" rows="5" class="form-control" name="address"></textarea>
                                 </div>
                               
+                                <div class="form-group col-lg-6">
+                                    <label>Upload Photo</label>
+                                    <input type="file" value="" id="photo" class="form-control" name="photo">
+                                </div>
                             </div>
                             <div align="center">
                                 <button class="btn btn-warning">Register</button>
@@ -172,14 +174,45 @@
                                     <label>Name</label>
                                     <input type="text" value="" id="name" class="form-control" name="name">
                                 </div>
-                                
-                                  <div class="form-group col-lg-6">
-                                    <label>Highest Qualification</label>
-                                    <input type="text" value="" id="qualification" class="form-control" name="qualification">
+                                   <div class="form-group col-lg-6">
+                                    <label>Father Name</label>
+                                    <input type="text" value="" id="name" class="form-control" name="name">
                                 </div>
+                                   <div class="form-group col-lg-6">
+                                    <label>Mother Name</label>
+                                    <input type="text" value="" id="name" class="form-control" name="name">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>School</label>
+                                   <select name="classId" id="classId" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="1">School1</option>
+                                   </select>
+                                </div>
+                                    
                                   <div class="form-group col-lg-6">
                                     <label>Hobbies</label>
                                     <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label> Experience</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Qualification</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Specialize in</label>
+                                    <input type="text" value="" id="hobbies" class="form-control" name="hobbies">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Gender</label>
+                                   <select name="gender" id="gender" class="form-control">
+                                    <option value="">Please Select</option>
+                                    <option value="Male">Male</option>
+                                    <option value="FeMale">FeMale</option>
+                                   </select>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>DOB</label>
@@ -194,35 +227,16 @@
                                     <input type="text" value="" id="phone" class="form-control" name="phone">
                                 </div>
                                  <div class="form-group col-lg-6">
-                                    <label>Current Address</label>
-                                    <input type="text"  id="facultycurrentaddress1" placeholder="address line 1" class="form-control" name="address1">
-                                     <label></label>
-                                    <input type="text" id="facultycurrentaddress2" placeholder="address line 2" class="form-control" name="address2">
-                                     <label></label>
-                                    <input type="text"  id="facultycurrentstate" placeholder="State" class="form-control" name="state">
-                                     <label></label>
-                                    <input type="text" id="facultycurrentdistrict" placeholder="District" class="form-control" name="district">
-                                     <label></label>
-                                    <input type="text"  id="facultycurrentcity" placeholder="City" class="form-control" name="city">
-                                     <label></label>
-                                    <input type="text" id="facultycurrentpincode" placeholder="Pin Code" class="form-control" name="pincode">
+                                    <label>Address</label>
+                                     <textarea id="address" placeholder="Address" rows="5" class="form-control" name="address"></textarea>
+                                  
+                        
                                 </div>
-                                 <div class="form-group col-lg-6">
-                                    
-                                    <label>Permanent Address</label> ( <input type="checkbox" name="facultyaddresscheck" id="facultyaddresscheck"/>Same as Current: )
-                                    <input type="text" value="" id="facultypermanentaddress1" placeholder="address line 1"  class="form-control" name="address1">
-                                      <label></label>
-                                    <input type="text" id="facultypermanentaddress2" placeholder="address line 2" class="form-control" name="address2">
-                                     <label></label>
-                                    <input type="text"  id="facultypermanentstate" placeholder="State" class="form-control" name="state">
-                                     <label></label>
-                                    <input type="text" id="facultypermanentdistrict" placeholder="District" class="form-control" name="district">
-                                     <label></label>
-                                    <input type="text"  id="facultypermanentcity" placeholder="City" class="form-control" name="city">
-                                     <label></label>
-                                    <input type="text" id="facultypermanentpincode" placeholder="Pin Code" class="form-control" name="pincode">
+                               
+                                <div class="form-group col-lg-6">
+                                    <label>Upload Photo</label>
+                                    <input type="file" value="" id="photo" class="form-control" name="photo">
                                 </div>
-                              
                             </div>
                             <div align="center">
                                 <button class="btn btn-warning">Register</button>
