--- a/views/partials/footer-script.ejs
+++ b/views/partials/footer-script.ejs
@@ -1,11 +1,20 @@
   <!-- jQuery -->
-      <!-- <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script> -->
+      <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
       <!-- jquery-ui --> 
+       <script src="/assets/plugins/jQuery/jquery.min.js"></script>
+       <script src="/assets/plugins/jQuery/jquery.dataTables.min.js"></script>
+		<script src="/assets/bootstrap/js/dataTables.bootstrap.min.js"></script>  
+		<script src="/assets/dist/js/toastr.min.js"></script>
+	
       <script src="/assets/plugins/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
+      
       <!-- Bootstrap -->
       <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+      	<link href="/assets/bootstrap/css/bootstrap-editable.css" rel="stylesheet"> 
+  		<script src="/assets/bootstrap/js/bootstrap-editable.js"></script>
       <!-- lobipanel -->
       <script src="/assets/plugins/lobipanel/lobipanel.min.js" type="text/javascript"></script>
+      
       <!-- Pace js -->
       <script src="/assets/plugins/pace/pace.min.js" type="text/javascript"></script>
       <!-- SlimScroll -->
@@ -13,6 +22,7 @@
       <!-- FastClick -->
       <script src="/assets/plugins/fastclick/fastclick.min.js" type="text/javascript"></script>
       <!-- CRMadmin frame -->
+      
       <script src="/assets/dist/js/custom.js" type="text/javascript"></script>
       <!-- End Core Plugins
          =====================================================================-->
@@ -37,10 +47,13 @@
         <script src="/assets/plugins/dataTables/buttons.colVis.min.js"></script>
       <!-- End Page Lavel Plugins
          =====================================================================-->
+         <script src="/assets/plugins/modals/classie.js" type="text/javascript"></script>
+      <script src="/assets/plugins/modals/modalEffects.js" type="text/javascript"></script>
       <!-- Start Theme label Script
          =====================================================================-->
       <!-- Dashboard js -->
       <script src="/assets/dist/js/dashboard.js" type="text/javascript"></script>
+      
       <!-- End Theme label Script
          =====================================================================-->
       <script>
