--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,13 +1,13 @@
 <% if (error.length>0) { %>
-<div class="alert alert-danger message" role="alert">
+<div class="alert alert-danger alert-dismissible fade show" id="error">
   <span><%= error %></span>
 </div>
 <% } %> <% if (error_msg.length>0) { %>
-<div  class="alert alert-danger message" role="alert">
+<div class="alert alert-danger alert-dismissible fade show" id="error_msg">
   <span id="errorMessage"><%= error_msg %></span>
 </div>
 <% } %> <% if (success_msg.length>0) { %>
-<div class="alert alert-success message" role="alert">
+<div class="alert alert-success alert-dismissible fade show" id="success_msg">
   <span id="message"><%= success_msg %></span>
 </div>
 <% } %>
