--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -199,7 +199,7 @@
                               <i class="fa fa-user"></i> User Profile</a>
                            </li>
                            <li><a href="#"><i class="fa fa-inbox"></i> Inbox</a></li>
-                           <li><a href="login.html">
+                           <li><a href="/logout">
                               <i class="fa fa-sign-out"></i> Signout</a>
                            </li>
                         </ul>
