--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -44,24 +44,24 @@
                                
                                 <a class="btn btn-primary" href="/register">if you are new Click Here.</a>
                             </div>
-                        <form action="http://thememinister.com/crm/index.html" id="loginForm" novalidate>
+                        <form action="/" id="loginForm" method="POST">
                             <div class="form-group">
                                 <label class="control-label" for="username">Username</label>
-                                <input type="text" placeholder="example@gmail.com" title="Please enter you username" required="" value="" name="username" id="username" class="form-control">
+                                <input type="text" placeholder="example@gmail.com" title="Please enter you username" required value="" name="username" id="username" class="form-control">
                                
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">Password</label>
-                                <input type="password" title="Please enter your password" placeholder="******" required="" value="" name="password" id="password" class="form-control">
+                                <input type="password" title="Please enter your password" placeholder="******" required value="" name="password" id="password" class="form-control">
                                
                             </div>
                             <div class="form-group">
                                  <label>Select Role</label>
-                                 <select class="form-control">
+                                 <select class="form-control" name="type" required>
                                     <option value="">Please Select Role</option>
-                                    <option value="1">Institute</option>
-                                    <option value="2">Faculty</option>
-                                    <option value="3">Student</option>
+                                    <option value="school">Institute</option>
+                                    <option value="faculty">Faculty</option>
+                                    <option value="student">Student</option>
                                  </select>
                               </div>
                             <div align="center">
