--- a/views/partials/footer-script.ejs
+++ b/views/partials/footer-script.ejs
@@ -1,6 +1,8 @@
   <!-- jQuery -->
+
       <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
       <!-- jquery-ui --> 
+    
        <script src="/assets/plugins/jQuery/jquery.min.js"></script>
        <script src="/assets/plugins/jQuery/jquery.dataTables.min.js"></script>
 		<script src="/assets/bootstrap/js/dataTables.bootstrap.min.js"></script>  
@@ -51,8 +53,11 @@
       <script src="/assets/plugins/modals/modalEffects.js" type="text/javascript"></script>
       <!-- Start Theme label Script
          =====================================================================-->
+               <script src="/assets/dist/js/sweetalert2.all.min.js"></script>
+    <script src="/assets/dist/js/sweetalert.min.js"></script>
       <!-- Dashboard js -->
       <script src="/assets/dist/js/dashboard.js" type="text/javascript"></script>
+     
       
       <!-- End Theme label Script
          =====================================================================-->
